0.6.9
- Disable kernel density estimation and contour plot by default (#116) 
- Add avi export option
- Bugfixes:
  - Fluorescence traces not shown for some data sets (#118)
  - Prefer the R package that is shipped with the executable over a
    system installation (#120)
  - Image plot and fluorescence traces were not always updated correctly
- dclab:
  - Add user defined data fields 0...9
  - Add principal components 1 and 2
  - Change Cell size to Area
0.6.8
- Speed-ups:
  - search for measurements (#113)
  - dclab 0.1.9dev10: contour handling
0.6.7
- Minimize memory usage for batch processing (#108)
- Allow export to flow cytometry standard file format (#54)
- dclab 0.1.9dev2: add support for "User Defined" column in tdms files
- dclab 0.1.9dev7: compute default parameters for contours (#55, #110)
0.6.6
- Hide unimportant data in Info tab (#102)
- Disable/Enable controls dependent on values of other controls (#103)
- Bugfixes:
  - Regression: Error when batch analysis started (#105, #106)
  - Contour error when plot contains no events (#104)
0.6.5
- Sessions are now autosaved every 60s (#97)
- Bugfixes:
  - Loading of sessions with hierarchy children failed (#99)
  - Reduced a memory leak for new analyses that resulted in frequent
    memory errors (should be less frequent now)
0.6.4
- Bugfixes:
  - Batch analysis: Individual measurement parameters not preserved (#96)
  - Legend plot: >9 measurements cannot be displayed in legend at
    the same time. Introduced new config key "Legend Autoscaled" (#91) 
- New filter hierarchy allows to investigate subpopulations (#87, #63)
- dclab
  - Add InertiaRatio and InertiaRatioRaw to tdms files (typo)
0.6.3
- Bugfixes:
  - Regression: Excluded events plotted on top of filtered events (#86)
  - PDF plot export: Scatter inspector event highlighted (#92)
- Implement differential (w.r.t. reservoir) linear-mixed models
  analysis with bootstrapping (#88)
0.6.2
- Add batch filter processing